--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,7 @@ h1, h2, h3, h4, h5, h5{
     text-decoration: none;
     /* font-family: var(--font-gidole); */
     font-weight: 500;
-    font-size: 60px;
+    font-size: 50px;
     
     position: absolute;
     top: 11px;
@@ -323,10 +323,10 @@ h1, h2, h3, h4, h5, h5{
 } */
 
 .vertical-line {
-  position: fixed;
-  left: 400px;
+  position: relative;
+  left: 350px;
   width: 1px;
-  height: 1080px;
+  top: 0;
+  bottom: 0;
   background-color: var(--color-light-grey);
-
 }
