--- a/styles.css
+++ b/styles.css
@@ -337,3 +337,45 @@ h1, h2, h3, h4, h5, h5{
   flex-grow: 1;
 }
 
+.search-box {
+  display: inline-flex;
+  /* width: 175px; */
+  height: 60px;
+  padding: 10px;
+  background: var(--color-light-grey);
+  border-radius: 40px;
+
+}
+
+.search-btn {
+  color: var(--color-grey);
+  float: right;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  padding: 0px;
+  background: var(--color-dark-grey);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+
+}
+.top-search:hover > .search-txt
+{
+  width: 240px;
+  padding: 0 6px;
+}
+
+.search-txt {
+  border: none;
+  background: none;
+  outline: none;
+  float: left;
+  padding-right: 10px;
+  color: var(--color-dark-grey);
+  font-size: 18px;
+  transition: var(--transition-duration);
+  line-height: 40px;
+  width: 175px;
+}
