--- a/styles/module.css
+++ b/styles/module.css
@@ -1,91 +1,26 @@
-.card{
-    --bs-card-border-color: var(--bs-body-bg);
-    height: 100px;
-    
-}
-.card-body{
-    background-color: #716F6F;
-    border-radius: 10px;
-    border-color: var(--bs-body-bg);
-   
-}
-
-#sidebarMenu {
-            height: 100vh; /* Высота на весь экран */
-            display: flex;
-            flex-direction: column;
-            overflow: hidden; /* Предотвращаем прокрутку всего сайдбара */
-        }
-        
-        .quizrulet-brand-sidebar {
-            display: flex;
-            border-bottom: solid 1px;
-            height: auto; /* Автоматическая высота для лого */
-            overflow: visible; /* Лого не должно скроллиться */
-        }
-        
-        #sidebarMenu ul.nav.flex-column {
-            flex: 1;
-            overflow-y: auto; /* Добавляем вертикальную прокрутку только для списка */
-            padding-right: 5px; /* Отступ для скроллбара */
-        }
-        
-        #sidebarMenu .help {
-            height: auto; /* Автоматическая высота для блока справки */
-            padding: 10px 0; /* Отступы для блока справки */
-            position: sticky;
-            bottom: 0;
-            background-color: inherit; /* Наследуем цвет фона */
-        }
-
-.sidebarList{
-    max-height: calc(100vh - 150px); /* Высота с учетом лого и справки 1*/
-    overflow-y: scroll;
-}
-
-.card-termin, .card-meaning{
-
-    min-height: 60%;
-}
-
-.card-txt{
-    background-color: #716F6F;
-    height: 50%;
-    border-radius: 20px;
-    border-width: 0;
-    width: 100%;
-    padding: 10px;
-    font-size: 24px;
-}
-
-.card-txt::placeholder{
-    color: white;
+.logo {
+    border-bottom: 1px solid #d9d9d9;
+    padding-left: 10px;
 }
 
 
 
-.btn-learn,
-.btn-import{
+.btn-learn {
     background-color: #5ee152;
-    color: black;
-    font-size: 18px;
+    border-radius: 15px;
+    height: 400px;
+}
+.placeholder{
+    background-color: var(--bs-body-bg);
 }
 
-
-
-.btn-learn:hover,
-.btn-import:hover{
-    background-color: darkgreen;
-    color: black;
+.progress-bar {
+    background-color: #716f6f;
+    border-radius: 15px;
+    height: 400px;
 }
 
-
-.module-name{
-    font-size: 26px;
+.name {
+    font-size: 28px;
 }
 
-.tooltip-inner {
-  max-width: 300px;
-  white-space: normal;
-  color: white;
-}
