--- a/styles/module_edit.css
+++ b/styles/module_edit.css
@@ -131,9 +131,7 @@
     font-family: 'Inter', sans-serif;
     font-size: 16px;
 
-}
-
-.btn-next-modal {
+}.btn-next-modal {
     background-color: #5ee152;
 }
 
