--- a/styles/module_edit.css
+++ b/styles/module_edit.css
@@ -44,8 +44,9 @@
 }
 
 .card-termin, .card-meaning{
-
+    
     min-height: 60%;
+    
 }
 
 .card-txt{
@@ -56,6 +57,7 @@
     width: 100%;
     padding: 10px;
     font-size: 24px;
+    resize: none;
 }
 
 .card-txt::placeholder{
@@ -160,3 +162,7 @@
     background-color: grey;
     
 } */
+
+#moduleDescription {
+    resize: none;
+}
