--- a/styles/mains/main_module.css
+++ b/styles/mains/main_module.css
@@ -1,24 +1,3 @@
-/* 
-.btn-learn {
-    background-color: #5ee152;
-    border-radius: 15px;
-    height: 400px;
-}
-.placeholder{
-    background-color: var(--bs-body-bg);
-}
-
-.progress-bar {
-    background-color: #716f6f;
-    border-radius: 15px;
-    height: 400px;
-}
-
-.name {
-    font-size: 28px;
-} */ */
-
-/* Базовые стили */
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
@@ -27,8 +6,16 @@ body {
 
 .main {
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     padding: 2rem;
+    background-color: transparent;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+.top-main-part{
+    display: flex;
+    gap: 2rem;
+
     background-color: transparent;
 }
 
@@ -47,28 +34,41 @@ body {
     flex-direction: column;
     display: flex;
 }
-
+/* Кнопка учить - НАЧАЛО */
 .learn-button {
     background-color: #5EE152;
     width: 100%;
     height: 100px;
     border: none;
-    font-weight: bold;
     border-radius: 8px;
     cursor: pointer;
     display: flex;
     align-items: center;
+    justify-content: center;
     box-sizing: border-box;
-    font-weight: 80%;
     color: white;
-    padding: 0 15%; /* Отступ с левой и правой стороны */
-}
+    padding: 0 8%;
+    gap: 2rem;
+    font-weight: bold;
+    }
 
+/* .button-items{
+    display: flex;
+    justify-content: center;
+} */
 .rocket-icon {
-    width: auto;
-    height: 80%;
+    width: 80px;
+    height: 80px;
     fill: white;
 }
+
+.button-text {
+    font-size: 5cap;
+    text-align: center;
+    }
+/* Кнопка учить - КОНЕЦ */
+
+/* Контейнер описания - НАЧАЛО */
 .description {
     background-color: #333;
     color: white;
@@ -76,14 +76,9 @@ body {
     border: 2px solid #5EE152;
     border-radius: 8px;
     height: 100px;
+    font-size: 1.5rem;
 }
-
-.button-text {
-    font-size: 5cap;
-    text-align: center;
-    }
-
-
+/* Контейнер описания - КОНЕЦ */
 
 .right-column {
     width: 40%;
@@ -95,6 +90,7 @@ body {
     display: flex;
 }
 
+/* Прогресс изучения - НАЧАЛО */
 .progress-bar {
     background-color: #716F6F;
     padding: 1rem;
@@ -102,7 +98,7 @@ body {
     height: 55px;
     color: white;
     text-align: center;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 .progress {
@@ -118,11 +114,21 @@ body {
     background-color: #2ecc71;
 }
 
+.progress-container{
+    display: flex;
+    margin-top: 0.2rem;
+    font-size: 1.5rem;
+    gap: 0.5rem;
+    align-items: center;
+}
+
+/* Прогресс изучения - КОНЕЦ */
+
+/* Отображение кол-ва карточек - Начало */
 .cards-count {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-
 }
 
 .unknown-cards,
@@ -130,12 +136,14 @@ body {
     background-color: #fff;
     border-radius: 5px;
     display: flex;
-    height: 1rem;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 45px;
     color: white;
+    font-size: 1.2rem;
+    padding: 0 1rem;
+    font-size: 2rem;
 }
 
 .red {
@@ -145,18 +153,26 @@ body {
 .green {
     background-color: #2ecc71;
 }
+.unknown-cards p,
+.known-cards p {
+    margin: 0;
+    white-space: nowrap;
+}
+/* Отображение кол-ва карточек - Конец */
 
+/* Кнопка добавления карточек - Начало */
 .add-card-button {
     height: 45px;
     background-color: #333;
-    color: #716F6F;
-    border: 2px solid #716F6F;
-    padding: 1rem 2rem;
+    color: #ACA8A8;
+    border: 2px solid #ACA8A8;
+    padding: 0 2rem;
     font-size: 1rem;
     font-weight: bold;
     border-radius: 8px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 1rem;
     cursor: pointer;
 }
@@ -164,16 +180,138 @@ body {
 .plus-icon {
     width: 30px;
     height: 30px;
-    fill: #716F6F;
+    fill: #ACA8A8;
 }
 
 .add-button-text {
-    font-size: 1rem;
+    font-size: clamp(0.8rem, 100vw, 1.5rem);
     text-align: center;
-    }
+    margin-right: 20%;
+}
+.add-card-button:hover {
+    background-color: #716F6F;
+}
+/* Кнопка добавления карточек - Конец */
 
-@media (max-width: 500px) {
-    .main {
+/* Блок с карточками ЗНАЮ/НЕ ЗНАЮ - Начало*/
+.card-list-UNKNOWN {
+    margin-top: 1rem;
+    background-color: #e74c3c;
+    border-radius: 8px;
+    padding: 1rem;
+}
+
+.card-list-KNOWN {
+    margin-top: 1rem;
+    background-color: #2ecc71;
+    border-radius: 8px;
+    padding: 1rem;
+}
+
+.card-list-title {
+    color: white;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.card-items {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    border-radius: 5px;
+    background-color: #333;
+}
+
+.card-item {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 0.5rem;
+}
+
+.card-index {
+    font-size: 1.2rem;
+    color: white;
+}
+
+.card-content {
+    display: flex;
+    width: 100%;
+    gap: 0.5rem;
+    
+}
+
+.card-term,
+.card-value {
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    background-color: #444;
+    color: white;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    height: auto;
+}
+/* Блок с карточками ЗНАЮ/НЕ ЗНАЮ - Конец */
+
+
+@media (max-width: 2560px) {
+    .add-button-text{
+        margin-right: 40%;
+    }
+}
+@media (max-width: 2000px) {
+    .add-button-text{
+        margin-right: 30%;
+    }
+}
+@media (max-width: 1440px) {
+    .add-button-text{
+        margin-right: 25%;
+    }
+}
+@media (max-width: 1100px) {
+    .add-button-text{
+        margin-right: 10%;
+    }
+}
+@media (max-width: 920px) {
+    .add-button-text{
+        margin-right: 10%;
+    }
+}
+@media (max-width: 830px) {
+    .add-button-text{
+        margin-right: 5%;
+    }
+}
+@media (max-width: 630px) {
+    .add-button-text{
+        margin-right: 25%;
+    }
+}
+@media (max-width: 490px) {
+    .add-button-text{
+        margin-right: 20%;
+    }
+}
+@media (max-width: 375px) {
+    .add-button-text{
+        margin-right: 8%;
+    }
+}
+@media (max-width: 320px) {
+    .add-button-text{
+        margin-right: 0%;
+    }
+}
+/* Кнопка добавления карточек - Конец*/
+
+@media (max-width: 630px) {
+    .top-main-part {
         display: flex;
         flex-direction: column;
         gap: 2rem;
@@ -183,5 +321,15 @@ body {
     }
     .right-column {
         width: 100%;
+    }
+    .right-column-countainer{
+        gap: 2rem;
+        height: 250px;
+    }
+    .cards-count{
+        gap: 2rem;
+    }
+    .card-content{
+        flex-direction: column;
     }
 }
