--- a/styles/footer.css
+++ b/styles/footer.css
@@ -3,11 +3,12 @@
     left: 0;
     width: 100%;
     height: 20px;
-    background-color: #5EE152;
+    background-color: #383636;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    border-top: 2px solid #5EE152;
 }
 
 .footer-content {
